# moba-sim-v2

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
_doxygen/xml/: Doxyfile.xml
docs/: Doxyfile  architecture.md  rewrite-guide.md
docs/sphinx/: conf.py  index.rst  overview.rst  python.rst
docs/sphinx/api/: champion.rst  combat.rst  events.rst  index.rst  mod_db.rst  signal.rst  simulation.rst  source.rst  types.rst
docs/superpowers/plans/: 2026-07-04-applypassives-redesign.md  2026-07-04-convergence-guard.md  2026-07-04-integration-scenarios.md  2026-07-04-test-suite.md
docs/superpowers/specs/: 2026-07-04-applypassives-redesign-design.md  2026-07-04-convergence-guard-design.md  2026-07-04-integration-scenarios-design.md  2026-07-04-test-suite-design.md
include/: moba_sim.hpp
include/moba/: champion.hpp  combat.hpp  event.hpp  mod_db.hpp  signal.hpp  simulation.hpp  source.hpp  types.hpp
nix/: default.nix
python/: CMakeLists.txt  moba_sim_ext.cpp
python/moba/: __init__.py
python/tests/: conftest.py  test_moba.py
src/: CMakeLists.txt  champion.cpp  combat.cpp  moba_sim.cpp  mod_db.cpp  simulation.cpp
tests/: CMakeLists.txt  test_champion.cpp  test_champion_stats.cpp  test_combat.cpp  test_events.cpp  test_mod_db.cpp  test_post_mitigation_damage.cpp  test_scenarios.cpp
